Move owlviz-readme.txt to main/resources as readme.html

--- a/src/main/resources/readme.html
+++ b/src/main/resources/readme.html
@@ -1,16 +1,20 @@
+<!DOCTYPE html>
 <html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+</head>
 <body>
+<h1>OWLViz</h211>
 
-<h2>OWLViz</h2>
-
-<p>
-This plug-in is part of the standard Prot&eacute;g&eacute; Desktop distribution and supports visualization of ontologies and their imports.
+<p>This plug-in is part of the standard Prot&eacute;g&eacute; Desktop distribution and supports
+visualization of ontologies and their imports.</p>
 
 <h3>Version info</h3>
 
 <h4>v5.0.0 7-Dec-2015</h4>
 <ul>
-<li>Compatible with Protege 5.0-beta-18.</li>
+<li>Compatible with Protege 5.0-beta-19.</li>
 </ul>
 
 <h4>v4.1.4 30-Jul-2013</h4>
